// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemName /> should render with props 1`] = `
<ItemName
  href="#"
  shrinkable={true}
>
  <div
    className="wrapper"
  >
    <ForwardRef(Link)
      href="#"
    >
      <a
        className="link color__brand-blue"
        href="#"
      >
        <Memo(Text)>
          <span
            className=""
          >
            <span
              className="name"
            >
              Foo Bar
            </span>
          </span>
        </Memo(Text)>
      </a>
    </ForwardRef(Link)>
  </div>
</ItemName>
`;

exports[`<ItemName /> should render without props 1`] = `
<ItemName>
  <div
    className="wrapper"
  >
    <ForwardRef(Link)>
      <a
        className="link color__brand-blue"
      >
        <Memo(Text)>
          <span
            className=""
          >
            <span
              className="name"
            />
          </span>
        </Memo(Text)>
      </a>
    </ForwardRef(Link)>
  </div>
</ItemName>
`;
